--- a/index.css
+++ b/index.css
@@ -1,3 +1,202 @@
+* {
+  padding: 0%;
+  margin: 0%;
+  scroll-behavior: smooth;
+}
+
+/* Header styles */
 #heading {
-  color: crimson;
+  display: flex;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.799);
+  justify-content: space-between;
+  align-items: center;
+  position: sticky;
+}
+
+.logo-img {
+  width: 10vmax;
+  height: 7vmax;
+}
+#nav {
+  margin-left: -8%;
+}
+#nav > ul {
+  display: flex;
+}
+#nav > ul > a {
+  text-decoration: none;
+  list-style: none;
+  color: black;
+  font-size: 1.8rem;
+  margin-right: 10rem;
+  transition: all 0.7s;
+}
+#nav > ul > a :hover {
+  border-bottom: 2px solid black;
+}
+#nav > ul > a[href="#1"] {
+  margin-right: 0%;
+}
+.head-right {
+  display: flex;
+  margin-right: 5%;
+}
+#cart {
+  margin-right: 45%;
+}
+.cart-img {
+  width: 3vmax;
+  height: 3vmax;
+  transition: all 0.1s;
+}
+.cart-img:hover {
+  border-bottom: 2px solid black;
+}
+.cart-user {
+  width: 3vmax;
+  height: 3vmax;
+}
+.searchbar {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  margin-top: 3.5%;
+  margin-right: 1.5%;
+}
+.searchbar > input {
+  width: 30%;
+  height: 2vmax;
+  border-radius: 9px;
+  border: none;
+  transition: all 0.1s;
+}
+.searchbar > input:hover {
+  border: 2px solid black;
+}
+.searchbar > input::placeholder {
+  font-size: 1.2rem;
+  padding-left: 1%;
+}
+.searchbar > button {
+  width: 6.5%;
+  margin-left: 2%;
+  padding: 0.6%;
+  border: none;
+  border-radius: 20px;
+  background-color: crimson;
+  color: white;
+  cursor: pointer;
+  transition: all 0.3s;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.457);
+}
+.searchbar > button:hover {
+  transform: scaleY(1.1);
+}
+.res-card {
+  display: flex;
+  justify-content: center;
+  padding-top: 6%;
+  margin-left: 5%;
+  margin-right: 5%;
+  flex-wrap: wrap;
+}
+.card {
+  cursor: pointer;
+  width: 20%;
+  margin-bottom: -2%;
+  padding-left: 3%;
+  transition: all 0.3s;
+}
+.card > h2 {
+  padding-top: 7%;
+}
+.card:hover {
+  transform: scaleY(1.1);
+}
+.card > img {
+  filter: drop-shadow(5px 5px 10px #080707);
+  width: 98%;
+  height: 45%;
+  border-radius: 25px;
+}
+
+.upg {
+  padding-left: 10%;
+  margin: 1%;
+}
+.star {
+  width: 6.2%;
+}
+#rating {
+  display: flex;
+  gap: 2%;
+  align-items: center;
+}
+#name {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+#areaname {
+  font-size: 1.1rem;
+}
+#footer {
+  border: 2px solid black;
+  background-color: rgb(206, 206, 206);
+  color: black;
+  display: flex;
+  justify-content: space-between;
+}
+.Company-Logo {
+  margin-left: 11%;
+}
+.Company-Logo > img {
+  width: 15vmax;
+  height: 10vmax;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.Company-Logo p {
+  margin-left: 17%;
+  margin-top: -10%;
+}
+.About {
+  display: flex;
+  flex-direction: column;
+  width: 11%;
+  margin-top: 2%;
+  margin-left: -17%;
+}
+
+.links {
+  border: 2px solid pink;
+  display: flex;
+  width: 15%;
+  flex-direction: column;
+}
+.text {
+  margin: 6%;
+}
+.auth {
+  flex-direction: column;
+  display: flex;
+  justify-content: space-between;
+  width: 11%;
+  margin-top: 2%;
+  margin-left: -15%;
+}
+.contact {
+  margin-bottom: 40%;
+}
+.social {
+  border: 2px solid red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.social-img {
+  border: 2px solid purple;
+}
+.logs {
+  width: 80%;
 }
