--- a/index.css
+++ b/index.css
@@ -11,6 +11,9 @@
   justify-content: space-between;
   align-items: center;
   position: sticky;
+  top: 0;
+  z-index: 99;
+  background-color: rgb(248, 248, 248);
 }
 
 .logo-img {
@@ -32,7 +35,9 @@
   transition: all 0.7s;
 }
 #nav > ul > a :hover {
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid crimson;
+  transform: scaleY(1.1);
+  color: crimson;
 }
 #nav > ul > a[href="#1"] {
   margin-right: 0%;
@@ -140,15 +145,14 @@
   font-size: 1.1rem;
 }
 #footer {
-  border: 2px solid black;
-  background-color: rgb(206, 206, 206);
+  background-color: rgb(248, 248, 248);
   color: black;
-  display: flex;
-  justify-content: space-between;
+  height: 27vmax;
 }
 .Company-Logo {
   margin-left: 11%;
 }
+
 .Company-Logo > img {
   width: 15vmax;
   height: 10vmax;
@@ -157,22 +161,26 @@
   align-items: center;
 }
 .Company-Logo p {
-  margin-left: 17%;
-  margin-top: -10%;
+  margin-top: -2%;
+  margin-left: 5%;
 }
 .About {
   display: flex;
   flex-direction: column;
   width: 11%;
-  margin-top: 2%;
-  margin-left: -17%;
+  margin-top: -9%;
+  margin-left: 550px;
 }
 
 .links {
-  border: 2px solid pink;
   display: flex;
   width: 15%;
   flex-direction: column;
+  margin-left: 77%;
+  margin-top: -20.5%;
+}
+.links > h3 {
+  margin-bottom: 5%;
 }
 .text {
   margin: 6%;
@@ -182,21 +190,41 @@
   display: flex;
   justify-content: space-between;
   width: 11%;
-  margin-top: 2%;
-  margin-left: -15%;
+  margin-top: -18%;
+  margin-left: 56%;
 }
 .contact {
   margin-bottom: 40%;
 }
 .social {
-  border: 2px solid red;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .social-img {
-  border: 2px solid purple;
+  display: flex;
+  flex-direction: column;
+  margin-top: 18%;
 }
 .logs {
   width: 80%;
+  transition: all 0.3s;
+}
+.logs:hover {
+  transform: scaleY(1.1);
+}
+.biglogs {
+  width: 95%;
+  transition: all 0.3s;
+}
+.biglogs:hover {
+  transform: scaleY(1.1);
+}
+.anc {
+  text-decoration: none;
+  color: black;
+}
+.anc:hover {
+  transform: scaleY(1.1);
+  color: crimson;
 }
