--- a/index.css
+++ b/index.css
@@ -21,26 +21,27 @@
   height: 7vmax;
 }
 #nav {
-  margin-left: -8%;
+  margin-left: 8%;
 }
 #nav > ul {
   display: flex;
 }
-#nav > ul > a {
+#nav > ul > li {
+  list-style: none;
+}
+.link {
   text-decoration: none;
   list-style: none;
   color: black;
   font-size: 1.8rem;
   margin-right: 10rem;
-  transition: all 0.7s;
+  transition: all 0.1s;
 }
-#nav > ul > a :hover {
+.link:hover {
   border-bottom: 2px solid crimson;
   color: crimson;
 }
-#nav > ul > a[href="#1"] {
-  margin-right: 0%;
-}
+
 .head-right {
   display: flex;
   margin-right: 5%;
@@ -283,4 +284,62 @@
   background-color: rgb(229, 226, 226);
   margin: 5%;
   border-radius: 15px;
+}
+.restruant {
+  border: 2px solid red;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 17vmax;
+}
+.top {
+  border-bottom: 2px dotted rgb(174, 169, 169);
+  display: flex;
+  justify-content: space-between;
+  width: 50vmax;
+  padding-bottom: 1%;
+  margin-top: 6%;
+}
+.offers {
+  height: 5vmax;
+  width: 50vmax;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 1%;
+  border-bottom: 1px solid rgb(148, 146, 146);
+}
+.cuisines {
+  border: 2px solid black;
+  height: 5vmax;
+  width: 50vmax;
+}
+
+.title > h3 {
+  padding-bottom: 5%;
+  font-size: 1.6vmax;
+}
+.title > p {
+  padding-bottom: 1%;
+  color: gray;
+}
+.rating {
+  border: 1px solid gray;
+  border-radius: 11px;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 3.6vmax;
+  display: flex;
+  padding: 1%;
+}
+.rating > h3 {
+  margin-bottom: 18%;
+}
+.paise {
+  display: flex;
+  margin-top: 2%;
+}
+.paise > h3 {
+  padding-right: 5%;
 }
