--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@
 }
 
 /* Header styles */
+
 #heading {
   display: flex;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.799);
@@ -72,6 +73,9 @@
   color: white;
   border: none;
 }
+
+/* Body Styling */
+
 .searchbar {
   display: flex;
   justify-content: flex-end;
@@ -108,6 +112,9 @@
 .searchbar > button:hover {
   transform: scaleY(1.1);
 }
+
+/* Restaurants card component Styling */
+
 .res-card {
   display: flex;
   justify-content: center;
@@ -155,6 +162,9 @@
 #areaname {
   font-size: 1.1rem;
 }
+
+/* Footer Styling */
+
 #footer {
   background-color: rgb(248, 248, 248);
   color: black;
@@ -252,6 +262,9 @@
   transition: all 0.3s;
   box-shadow: 0 0 10px #00000075;
 }
+
+/* Shimmer UI Styling */
+
 .inner {
   background-color: rgb(237, 240, 240);
   width: 20%;
@@ -285,53 +298,88 @@
   margin: 5%;
   border-radius: 15px;
 }
+
+/* Restaurant Styling */
+
 .restruant {
-  border: 2px solid red;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 17vmax;
 }
 .top {
   border-bottom: 2px dotted rgb(174, 169, 169);
   display: flex;
   justify-content: space-between;
   width: 50vmax;
-  padding-bottom: 1%;
+  padding-bottom: 1.2%;
   margin-top: 6%;
 }
 .offers {
-  height: 5vmax;
+  margin-bottom: 1.5%;
   width: 50vmax;
   display: flex;
   flex-direction: column;
-  padding-bottom: 1%;
-  border-bottom: 1px solid rgb(148, 146, 146);
+  padding-bottom: 3%;
+  border-bottom: 8px solid #ececec;
 }
 .cuisines {
-  border: 2px solid black;
-  height: 5vmax;
-  width: 50vmax;
+  color: #414141;
+  width: 48.4vmax;
+  margin-left: 0.6%;
+  font-family: Segoe UI, Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1.5vmax;
+  font-weight: bold;
+  margin-bottom: 2%;
 }
 
-.title > h3 {
+.title p:first-child {
   padding-bottom: 5%;
   font-size: 1.6vmax;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: #1f1e1e;
+  font-weight: 600;
 }
 .title > p {
   padding-bottom: 1%;
   color: gray;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1vmax;
 }
 .rating {
-  border: 1px solid gray;
-  border-radius: 11px;
+  border: 1px solid rgb(214, 214, 214);
+  border-radius: 9px;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
   height: 3.6vmax;
   display: flex;
   padding: 1%;
+  width: 9%;
+  height: 4vmax;
+}
+.sta {
+  display: flex;
+  margin-bottom: 18%;
+  margin-left: 20%;
+}
+.sta > img {
+  width: 29%;
+  padding-right: 5.7%;
+}
+.sta > h3 {
+  color: rgb(250, 216, 26);
+}
+.plus {
+  border-top: 1px solid rgb(214, 214, 214);
+}
+.plus > p {
+  color: gray;
+  font-size: 0.7vmax;
+  font-weight: bold;
+  padding-top: 17%;
+  font-family: Segoe UI, Tahoma, Geneva, Verdana, sans-serif;
+  padding-bottom: 9%;
 }
 .rating > h3 {
   margin-bottom: 18%;
@@ -339,7 +387,87 @@
 .paise {
   display: flex;
   margin-top: 2%;
+  margin-left: 1.2%;
 }
-.paise > h3 {
-  padding-right: 5%;
+.paise img {
+  width: 2.5%;
+  padding-right: 1.3%;
+}
+.paise > p {
+  padding-right: 4%;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 1.1vmax;
+  color: #343434;
+}
+.coupon {
+  display: flex;
+  gap: 2%;
+}
+.percent {
+  display: flex;
+  border: 1px solid rgb(190, 187, 187);
+  flex-direction: column;
+  border-radius: 8px;
+  padding: 2%;
+  margin-top: 2.5%;
+  width: 28%;
+  height: 2.5vmax;
+}
+.discount > h3 {
+  padding-bottom: 1%;
+  font-size: 1.03vmax;
+  font-weight: bolder;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  color: #4f4e4e;
+}
+.percent > p {
+  padding-top: 1%;
+  padding-left: 1.5%;
+  font-size: 0.8vmax;
+  font-weight: bolder;
+  color: #898989;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+.discount {
+  display: flex;
+}
+.discount > img {
+  width: 11.2%;
+  height: 82%;
+  padding-right: 4.3%;
+}
+.rups > img {
+  width: 2.18%;
+}
+.menu-card {
+  display: flex;
+  width: 49.2vmax;
+  border-bottom: 1.5px solid rgb(183, 182, 182);
+  margin-bottom: 2%;
+}
+.menu-card > img {
+  border-radius: 13px;
+  min-width: 32%;
+  height: 6.5vmax;
+  cursor: pointer;
+}
+.rups {
+  display: flex;
+}
+.write > p {
+  padding-bottom: 1%;
+  font-family: Segoe UI, Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
+  font-size: 1.3vmax;
+}
+.parat {
+  margin-right: 3%;
+}
+.parat > p {
+  color: #8d8b8b;
+  margin-top: 3%;
+  font-family: Segoe UI, Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 0.9vmax;
+  margin-bottom: 8%;
+  width: 85%;
 }
