--- a/index.css
+++ b/index.css
@@ -129,6 +129,8 @@
   margin-bottom: -2%;
   padding-left: 3%;
   transition: all 0.3s;
+  color: #080707;
+  text-decoration: none;
 }
 .card > h2 {
   padding-top: 7%;
