--- a/index.css
+++ b/index.css
@@ -1,511 +1,3 @@
-* {
-  padding: 0%;
-  margin: 0%;
-  scroll-behavior: smooth;
-}
-
-/* Header styles */
-
-#heading {
-  display: flex;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.799);
-  justify-content: space-between;
-  align-items: center;
-  position: sticky;
-  top: 0;
-  z-index: 99;
-  background-color: rgb(248, 248, 248);
-}
-
-.logo-img {
-  width: 10vmax;
-  height: 7vmax;
-}
-#nav {
-  margin-left: 8%;
-}
-#nav > ul {
-  display: flex;
-}
-#nav > ul > li {
-  list-style: none;
-}
-.link {
-  text-decoration: none;
-  list-style: none;
-  color: black;
-  font-size: 1.8rem;
-  margin-right: 10rem;
-  transition: all 0.1s;
-}
-.link:hover {
-  border-bottom: 2px solid crimson;
-  color: crimson;
-}
-
-.head-right {
-  display: flex;
-  margin-right: 5%;
-}
-#cart {
-  margin-right: 45%;
-}
-.cart-img {
-  width: 3vmax;
-  height: 3vmax;
-  transition: all 0.1s;
-}
-.cart-img:hover {
-  border-bottom: 2px solid black;
-}
-.user-img {
-  width: 6vmax;
-  padding: 1vmax;
-  border-radius: 28px;
-  margin-left: -19%;
-  font-size: 1.1vmax;
-  cursor: pointer;
-  transition: all 0.3s;
-}
-.user-img:hover {
-  transform: scaleY(1.1);
-  background-color: crimson;
-  color: white;
-  border: none;
-}
-
-/* Body Styling */
-
-.searchbar {
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  margin-top: 3.5%;
-  margin-right: 1.5%;
-}
-.searchbar > input {
-  width: 30%;
-  height: 2vmax;
-  border-radius: 9px;
-  border: none;
-  transition: all 0.1s;
-}
-.searchbar > input:hover {
-  border-bottom: 2px solid black;
-}
-.searchbar > input::placeholder {
-  font-size: 1.2rem;
-  padding-left: 1%;
-}
-.searchbar > button {
-  width: 6.5%;
-  margin-left: 2%;
-  padding: 0.6%;
-  border: none;
-  border-radius: 20px;
-  background-color: crimson;
-  color: white;
-  cursor: pointer;
-  transition: all 0.3s;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.457);
-}
-.searchbar > button:hover {
-  transform: scaleY(1.1);
-}
-
-/* Restaurants card component Styling */
-
-.res-card {
-  display: flex;
-  justify-content: center;
-  padding-top: 6%;
-  margin-left: 5%;
-  margin-right: 5%;
-  flex-wrap: wrap;
-}
-.card {
-  cursor: pointer;
-  width: 20%;
-  margin-bottom: -2%;
-  padding-left: 3%;
-  transition: all 0.3s;
-  color: #080707;
-  text-decoration: none;
-}
-.card > h2 {
-  padding-top: 7%;
-}
-.card:hover {
-  transform: scaleY(1.1);
-}
-.card > img {
-  filter: drop-shadow(5px 5px 10px #080707);
-  width: 98%;
-  height: 45%;
-  border-radius: 25px;
-}
-
-.upg {
-  padding-left: 10%;
-  margin: 1%;
-}
-.star {
-  width: 6.2%;
-}
-#rating {
-  display: flex;
-  gap: 2%;
-  align-items: center;
-}
-#name {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-#areaname {
-  font-size: 1.1rem;
-}
-
-/* Footer Styling */
-
-#footer {
-  background-color: rgb(248, 248, 248);
-  color: black;
-  height: 27vmax;
-}
-.Company-Logo {
-  margin-left: 11%;
-}
-
-.Company-Logo > img {
-  width: 15vmax;
-  height: 10vmax;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.Company-Logo p {
-  margin-top: -2%;
-  margin-left: 5%;
-}
-.About {
-  display: flex;
-  flex-direction: column;
-  width: 11%;
-  margin-top: -9%;
-  margin-left: 550px;
-}
-
-.links {
-  display: flex;
-  width: 15%;
-  flex-direction: column;
-  margin-left: 77%;
-  margin-top: -20.5%;
-}
-.links > h3 {
-  margin-bottom: 5%;
-}
-.text {
-  margin: 6%;
-}
-.auth {
-  flex-direction: column;
-  display: flex;
-  justify-content: space-between;
-  width: 11%;
-  margin-top: -18%;
-  margin-left: 56%;
-}
-.contact {
-  margin-bottom: 40%;
-}
-.social {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.social-img {
-  display: flex;
-  flex-direction: column;
-  margin-top: 18%;
-}
-.logs {
-  width: 80%;
-  transition: all 0.3s;
-}
-.logs:hover {
-  transform: scaleY(1.1);
-}
-.biglogs {
-  width: 95%;
-  transition: all 0.3s;
-}
-.biglogs:hover {
-  transform: scaleY(1.1);
-}
-.anc {
-  text-decoration: none;
-  color: black;
-}
-.anc:hover {
-  transform: scaleY(1.1);
-  color: crimson;
-}
-.filter-btn {
-  margin-right: 42%;
-  color: #fff;
-  cursor: pointer;
-  background-color: #dc143c;
-  border: none;
-  border-radius: 20px;
-  width: 10.5%;
-  margin-left: 2%;
-  padding: 1%;
-  transition: all 0.3s;
-  box-shadow: 0 0 10px #00000075;
-}
-
-/* Shimmer UI Styling */
-
-.inner {
-  background-color: rgb(237, 240, 240);
-  width: 20%;
-  height: 18vmax;
-  margin-bottom: 5%;
-  border-radius: 25px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.shimmer {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 5%;
-  justify-content: center;
-  align-items: center;
-  margin: 5vmax;
-}
-.in {
-  width: 60%;
-  height: 5%;
-  background-color: rgb(229, 226, 226);
-  margin: 5%;
-  border-radius: 25px;
-}
-.ou {
-  width: 80%;
-  height: 50%;
-  background-color: rgb(229, 226, 226);
-  margin: 5%;
-  border-radius: 15px;
-}
-
-/* Restaurant Styling */
-
-.restruant {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.top {
-  border-bottom: 2px dotted rgb(174, 169, 169);
-  display: flex;
-  justify-content: space-between;
-  width: 50vmax;
-  padding-bottom: 1.2%;
-  margin-top: 6%;
-}
-.offers {
-  margin-bottom: 1.5%;
-  width: 50vmax;
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 3%;
-  border-bottom: 8px solid #ececec;
-}
-.cuisines {
-  color: #414141;
-  width: 48.4vmax;
-  margin-left: 0.6%;
-  font-family: Segoe UI, Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 1.5vmax;
-  font-weight: bold;
-  margin-bottom: 2%;
-}
-
-.title p:first-child {
-  padding-bottom: 5%;
-  font-size: 1.6vmax;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  color: #1f1e1e;
-  font-weight: 600;
-}
-.title > p {
-  padding-bottom: 1%;
-  color: gray;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 1vmax;
-}
-.rating {
-  border: 1px solid rgb(214, 214, 214);
-  border-radius: 9px;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  height: 3.6vmax;
-  display: flex;
-  padding: 1%;
-  width: 9%;
-  height: 4vmax;
-}
-.sta {
-  display: flex;
-  margin-bottom: 18%;
-  margin-left: 20%;
-}
-.sta > img {
-  width: 29%;
-  padding-right: 5.7%;
-}
-.sta > h3 {
-  color: rgb(250, 216, 26);
-}
-.plus {
-  border-top: 1px solid rgb(214, 214, 214);
-}
-.plus > p {
-  color: gray;
-  font-size: 0.7vmax;
-  font-weight: bold;
-  padding-top: 17%;
-  font-family: Segoe UI, Tahoma, Geneva, Verdana, sans-serif;
-  padding-bottom: 9%;
-}
-.rating > h3 {
-  margin-bottom: 18%;
-}
-.paise {
-  display: flex;
-  margin-top: 2%;
-  margin-left: 1.2%;
-}
-.paise img {
-  width: 2.5%;
-  padding-right: 1.3%;
-}
-.paise > p {
-  padding-right: 4%;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  font-size: 1.1vmax;
-  color: #343434;
-}
-.coupon {
-  display: flex;
-  gap: 2%;
-}
-.percent {
-  display: flex;
-  border: 1px solid rgb(190, 187, 187);
-  flex-direction: column;
-  border-radius: 8px;
-  padding: 2%;
-  margin-top: 2.5%;
-  width: 28%;
-  height: 2.5vmax;
-}
-.discount > h3 {
-  padding-bottom: 1%;
-  font-size: 1.03vmax;
-  font-weight: bolder;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  color: #4f4e4e;
-}
-.percent > p {
-  padding-top: 1%;
-  padding-left: 1.5%;
-  font-size: 0.8vmax;
-  font-weight: bolder;
-  color: #898989;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-}
-.discount {
-  display: flex;
-}
-.discount > img {
-  width: 11.2%;
-  height: 82%;
-  padding-right: 4.3%;
-}
-.rups > img {
-  width: 2.18%;
-}
-.menu-card {
-  display: flex;
-  width: 49.2vmax;
-  border-bottom: 1.5px solid rgb(183, 182, 182);
-  margin-bottom: 2%;
-}
-.menu-card > img {
-  border-radius: 13px;
-  min-width: 32%;
-  height: 6.5vmax;
-  cursor: pointer;
-}
-.rups {
-  display: flex;
-}
-.write > p {
-  padding-bottom: 1%;
-  font-family: Segoe UI, Tahoma, Geneva, Verdana, sans-serif;
-  font-weight: 600;
-  font-size: 1.3vmax;
-}
-.parat {
-  margin-right: 3%;
-}
-.parat > p {
-  color: #8d8b8b;
-  margin-top: 3%;
-  font-family: Segoe UI, Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 0.9vmax;
-  margin-bottom: 8%;
-  width: 85%;
-}
-.about {
-  width: 91vw;
-  margin: 10vmax 10vmax 10vmax 3%;
-  display: flex;
-  gap: 3%;
-  filter: drop-shadow(5px 5px 10px #080707);
-  flex-wrap: wrap;
-}
-.env {
-  border-radius: 10px;
-  width: 15vw;
-  height: 46vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #e8e8e8;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 1vmax;
-  margin-bottom: 4%;
-  transition: all 0.3s;
-  cursor: pointer;
-}
-.env:hover {
-  transform: scaleY(1.1);
-}
-.env > img {
-  border-radius: 10px 10px 0 0;
-  width: 100%;
-  height: 15vmax;
-}
-.hi {
-  margin-left: -20%;
-}
-.ho {
-  margin: 5% 0;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
